[gd_scene load_steps=2 format=3 uid="uid://buildmenu001"]

[ext_resource type="Script" path="res://scripts/ui/build_menu.gd" id="1"]

[node name="BuildMenu" type="PanelContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -280.0
offset_right = 240.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0
custom_minimum_size = Vector2(480, 160)
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="BuildMenuTitle" type="Label" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
text = "Build"
theme_override_font_sizes/font_size = 18
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="Margin/VBox/Header"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(100, 44)
text = "Cancel"
theme_override_font_sizes/font_size = 14

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="BuildingGrid" type="GridContainer" parent="Margin/VBox/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
